trying to fix deplo

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,8 +1,9 @@
 ---
 26C-fotel-1105-1.jpg: 26C-fotel-1105-1-94064c8fa5cd3796a1f795dcbcdb9f7b.jpg
+photo.jpeg: photo-5822864de9f27922b7e257d04bb08c9f.jpeg
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
 application.js: application-3a899fb56dc17d662bfe2a3bd4d42464.js
-application.css: application-2d20200e02c3495503ad8ce0785eaf36.css
+application.css: application-6c416b37cec9d1eede1feafdd5b5944a.css
 jquery.min.map: jquery.min-e114a636272720addc8ee64f57a10f79.map
 glyphicons-halflings-white.png: glyphicons-halflings-white-13553a5bf21ae3cc374006592488ec64.png
 glyphicons-halflings.png: glyphicons-halflings-ab3144065a860d198f1d7d9a4882640c.png
